[gd_scene load_steps=10 format=2]

[ext_resource path="res://asset/background/main menu/Grassy Field Day.png" type="Texture" id=1]
[ext_resource path="res://scene/mainMenu.gd" type="Script" id=2]
[ext_resource path="res://asset/background/main menu/leaves.png" type="Texture" id=4]
[ext_resource path="res://prefabs/new_theme.tres" type="Theme" id=5]

[sub_resource type="Curve" id=1]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 277.364 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.0818181 ), 0.0, 4.16928, 0, 0, Vector2( 1, 0.409091 ), -0.307071, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 400, 400, 1 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 61.74
gravity = Vector3( -150, 50, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 150.7
angle_random = 0.49
angle_curve = SubResource( 2 )
scale_curve = SubResource( 4 )

[node name="mainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 639.441, 362.228 )
scale = Vector2( 0.343299, 0.343299 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 551.0
margin_top = 430.0
margin_right = 655.0
margin_bottom = 537.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startButton" type="Button" parent="VBoxContainer"]
margin_right = 104.0
margin_bottom = 23.0
text = "New game"

[node name="loadGame" type="Button" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 104.0
margin_bottom = 50.0
disabled = true
text = "Load game"

[node name="optionButton2" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 104.0
margin_bottom = 77.0
text = "Option"

[node name="exitButton" type="Button" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 104.0
margin_bottom = 104.0
text = "exit"

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 1182.15, 90.8886 )
amount = 35
lifetime = 5.0
speed_scale = 0.8
process_material = SubResource( 5 )
texture = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer/startButton" to="." method="_on_startButton_pressed"]
[connection signal="pressed" from="VBoxContainer/loadGame" to="." method="_on_loadGame_pressed"]
[connection signal="pressed" from="VBoxContainer/exitButton" to="." method="_on_exitButton_pressed"]
